# uart_loader

./: .clang-format  CMakeLists.txt  README.md  a.out  build.sh  link_mac.c  link_mac.h  main.c  main.cpp  mydef.h  test_200_unpackage_bin  test_bin_package  test_log
bin_transfer/: bin_transfer.c  bin_transfer.cpp  bin_transfer.h  bin_transfer.hpp  bin_transfer_protocol.h
crc/: crc32.h  crc32_mpeg2.c
test_data/: test_bin  test_bin_2
uart_port/: UartCore.cpp  UartCore.hpp  uart_port.c  uart_port.cpp  uart_port.h  uart_port.hpp  uart_test.c
